--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "swiper": "^11.2.4",
